[package]
name = "wormhole-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.25.0",features=["init-if-needed"]}
solana-program = "1.10.31"
# bracket-lib = {git="https://github.com/amethyst/bracket-lib"}
wormhole-sdk = {path="/Users/gorangutovic/Desktop/wormhole/wormhole/sdk/rust/sdk",features=["solana","devnet"]}
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
